add follow use case
